style: fix logo alignment

--- a/src/sphinx_breeze_theme/assets/styles/components/header-brand.css
+++ b/src/sphinx_breeze_theme/assets/styles/components/header-brand.css
@@ -9,7 +9,6 @@
 
   > * {
     height: 2.275rem;
-    line-height: 1.2;
   }
 
   &:hover {
